Add image rendering: Pexels API integration, render service, moderation bot updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,9 @@ openai>=1.0.0
 
 # Для HTTP запросов (если понадобится)
 requests>=2.31.0
+
+# Flask для микросервиса стилизации
+flask>=3.0.0
+
+# Pillow для обработки изображений
+Pillow>=10.0.0
