Add httpx[socks] for SOCKS5 proxy support in Pexels API

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ openai>=1.0.0
 
 # Для HTTP запросов (если понадобится)
 requests>=2.31.0
+httpx[socks]>=0.25.0
 
 # Flask для микросервиса стилизации
 flask>=3.0.0
